Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 %----------------------------------------------------------------------------------------
 %	ARTICLE INFORMATION
 %----------------------------------------------------------------------------------------
-\title{DeepRTS: A Flexible Machine Learning platform for Real Time Strategy Games}
+\title{DeepRTS: A Flexible Deep Learning platform for Real Time Strategy Games}
 \date{October 31, 2014}
 \author{Per-Arne Andersen \and Morten Goodwin \and Ole-Christoffer Granmo}
 
@@ -43,8 +43,10 @@
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
 \begin{abstract}
-We propose a Deep learning platform, \textit{\textbf{DeepRTS}} for edge research in the field of artificial intelligence. Games can be used to compare and develop novel AI techniques which can be used in real world scenarios. The proposed platform consist of a high performance, real-time strategy game with several API gateways for reinforcement learning, deep learning and machine learning development. RTS Games are known to have a high branching factor. \todo{This requires algorithms to have a high discover rate, or a technique to easily eliminate the state space pool}. This work also present results of existing machine learning techniques applied to the learning platform. An survey of applicable algorithms for solving RTS is also outlined to create a future work plan for the learning platform.
+We propose a Deep learning platform, \textit{\textbf{DeepRTS}} for edge research in the field of artificial intelligence. Games can be used to compare and develop novel AI techniques which can be used in real world scenarios. The proposed platform consist of a high performance, real-time strategy game with several API gateways for reinforcement learning, deep learning and machine learning development. RTS Games are known to have a high branching factor. \todo{HMM}This requires algorithms to have a high discover rate, or a technique to easily eliminate the state space pool. This work also present results of existing machine learning techniques applied to the learning platform. An survey of applicable algorithms for solving RTS is also outlined to create a future work plan for the learning platform
 \end{abstract}
+
+
 %----------------------------------------------------------------------------------------
 
 \newpage
@@ -78,7 +80,13 @@ This work attempts to take \textit{microRTS}, a RTS simulator closer to the ulti
 
 %------------------------------------------------
 \section{State of the art} % The \section*{} command stops section numbering
-\addcontentsline{toc}{section}{State of the art} % Adds this section to the table of contents
+%\addcontentsline{toc}{section}{State of the art} % Adds this section to the table of contents
+
+\todo{SOURCE}AI and Deep Learning have since 2011 grown exponentially as a field of research. 
+It started
+
+\textit{Reinforcement Learning} can be classified into two fields; \textbf{Model} and\textbf{ Model-Free} Learning. The model describes the environment and even the RL Agent itself so that it can perform better when performing actions in the environment.
+
 
 
 \section{Real-Time Strategy Games}
