--- a/sample.bib
+++ b/sample.bib
@@ -1,8 +1,54 @@
-@ARTICLE{Figueredo:2009dg,
-   author = {Figueredo, A.~J. and Wolf, P. S.~A.},
-   title = {Assortative pairing and life history strategy - a cross-cultural study.},
-   journal = {Human Nature},
-   volume = {20},
-   pages = {317-330},
-   year = {2009}
+
+@article{DBLP:journals/corr/MnihKSGAWR13,
+  author    = {Volodymyr Mnih and
+               Koray Kavukcuoglu and
+               David Silver and
+               Alex Graves and
+               Ioannis Antonoglou and
+               Daan Wierstra and
+               Martin A. Riedmiller},
+  title     = {Playing Atari with Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1312.5602},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.5602},
+  timestamp = {Wed, 01 Apr 2015 20:06:15 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MnihKSGAWR13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/corr/MoravcikSBLMBDW17,
+  author    = {Matej Moravc{\'{\i}}k and
+               Martin Schmid and
+               Neil Burch and
+               Viliam Lis{\'{y}} and
+               Dustin Morrill and
+               Nolan Bard and
+               Trevor Davis and
+               Kevin Waugh and
+               Michael Johanson and
+               Michael H. Bowling},
+  title     = {DeepStack: Expert-Level Artificial Intelligence in No-Limit Poker},
+  journal   = {CoRR},
+  volume    = {abs/1701.01724},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1701.01724},
+  timestamp = {Wed, 01 Feb 2017 17:47:56 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MoravcikSBLMBDW17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{Silver_2016,
+  author = {Silver, David and Huang, Aja and Maddison, Chris J. and Guez, Arthur and Sifre, Laurent and van den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
+  doi = {10.1038/nature16961},
+  interhash = {48430c7891aaf9fe2582faa8f5d076c1},
+  intrahash = {9e987f58d895c490144693139cbc90c7},
+  journal = {Nature},
+  month = jan,
+  number = 7587,
+  pages = {484--489},
+  publisher = {Nature Publishing Group},
+  title = {Mastering the Game of {Go} with Deep Neural Networks and Tree Search},
+  volume = 529,
+  year = 2016
 }
