Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,6 @@
 %   BIBLIOGRAPHY
 %
 \usepackage{cite}
-\bibliography{sample}{}
-\bibliographystyle{plain}
-
 %----------------------------------------------------------------------------------------
 %	COLUMNS
 %----------------------------------------------------------------------------------------
@@ -35,7 +32,7 @@
 %----------------------------------------------------------------------------------------
 %	ARTICLE INFORMATION
 %----------------------------------------------------------------------------------------
-\title{DeepRTS: Flexible Deep Learning platform for Real Time Strategy Games}
+\title{DeepRTS: Flexible Deep Learning environment for Real Time Strategy Games}
 \date{\today}
 \author{Per-Arne Andersen \and Morten Goodwin \and Ole-Christoffer Granmo}
 
@@ -51,8 +48,8 @@
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
 \begin{abstract}
-We propose a Deep learning platform, \textit{\textbf{DeepRTS}} for edge research in the field of artificial intelligence. 
-Games are a excellent tool for creating novel AI techniques which can be adpoted to real world scenarios. The proposed platform is a high performance, real-time strategy game with several API gateways for artificial intelligence research. RTS games are known to have a high state branching factor. This forces proposed algorithms to have a high discover rate, or a technique to easily locate important features the state space. This work present results of Monte-Carlo Tree Search and Deep Q-Learning applied to the platform. An survey of applicable algorithms for solving RTS is also outlined to create a future work roadmap for the learning platform.
+We propose a Deep learning environment, \textit{\textbf{DeepRTS}} for edge research in the field of artificial intelligence. 
+Games are a excellent tool for creating novel AI techniques which can be adopted to real world scenarios. The proposed environment is a high performance, real-time strategy game with several API gateways for artificial intelligence research. RTS games are known to have a high state branching factor. This forces proposed algorithms to have a high discover rate, or a technique to easily locate important features the state space. This work present results of Monte-Carlo Tree Search and Deep Q-Learning applied to the environment. An survey of applicable algorithms for solving RTS is also outlined to create a future work roadmap for the learning environment.
 \end{abstract}
 %----------------------------------------------------------------------------------------
 
@@ -133,6 +130,10 @@ The goal of DeepRTS is to improve productivity and the understanding of artifici
 \section{Algorithms}
 
 \subsection{DQN}
+Q-Learning is a strong family of algorithms used to determine which state
+
+
+
 \includegraphics[width=\linewidth]{3000.png}
 \includegraphics[width=\linewidth]{12000.png}
 
